# inline-c-nag

./: .travis.yml  README.md  inline-c-nag.cabal
examples/: a02bac.hs  c06puce.hs  nelder-mead.hs  ode-runge-kutta.hs  ode.hs  one-dim-fft.hs
src/Language/C/Inline/: Nag.hs
src/Language/C/Inline/Nag/: Internal.hsc
