name:                inline-c-nag
version:             0.1.0.0
synopsis:            Utilities to use inline-c with NAG.
description:         See <https://github.com/fpco/inline-c-nag/blob/master/README.md>
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            Math
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fpco/inline-c-nag

flag examples
  description:         Build examples
  default:             False

library
  exposed-modules:     Language.C.Inline.Nag
  other-modules:       Language.C.Inline.Nag.Internal
  c-sources:           src/Language/C/Inline/Nag.c
  build-depends:       base >=4.7 && <5
                     , inline-c
                     , template-haskell
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC
  cc-options:          -m64

-- Examples

executable a02bac
  hs-source-dirs:      examples
  main-is:             a02bac.hs
  c-sources:           examples/a02bac.c
  default-language:    Haskell2010
  cc-options:          -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC

  if flag(examples)
    buildable: True
    build-depends:       base >=4 && <5
                       , inline-c
                       , inline-c-nag
                       , raw-strings-qq
  else
    buildable: False

executable c06puce
  hs-source-dirs:      examples
  main-is:             c06puce.hs
  c-sources:           examples/c06puce.c
  default-language:    Haskell2010
  cc-options:          -m64 -w
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC

  if flag(examples)
    buildable: True
    build-depends:       base >=4 && <5
                       , array
                       , inline-c
                       , inline-c-nag
                       , raw-strings-qq
  else
    buildable: False

executable one-dim-fft
  hs-source-dirs:      examples
  main-is:             one-dim-fft.hs
  c-sources:           examples/one-dim-fft.c
  default-language:    Haskell2010
  cc-options:          -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC

  if flag(examples)
    buildable: True
    build-depends:       base >=4 && <5
                       , array
                       , inline-c
                       , inline-c-nag
                       , vector
  else
    buildable: False

executable nelder-mead
  hs-source-dirs:      examples
  main-is:             nelder-mead.hs
  c-sources:           examples/nelder-mead.c
  default-language:    Haskell2010
  cc-options:          -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC

  if flag(examples)
    buildable: True
    build-depends:       base >=4 && <5
                       , array
                       , inline-c
                       , inline-c-nag
                       , vector
                       , async
  else
    buildable: False

executable ode
  hs-source-dirs:      examples
  main-is:             ode.hs
  c-sources:           examples/ode.c
  default-language:    Haskell2010
  cc-options:          -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC -fno-warn-name-shadowing

  if flag(examples)
    buildable: True
    build-depends:       base >=4 && <5
                       , inline-c
                       , inline-c-nag
                       , vector
  else
    buildable: False

executable ode-runge-kutta
  hs-source-dirs:      examples
  main-is:             ode-runge-kutta.hs
  c-sources:           examples/ode-runge-kutta.c
  default-language:    Haskell2010
  cc-options:          -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC -fno-warn-name-shadowing

  if flag(examples)
    buildable: True
    build-depends:       base >=4 && <5
                       , inline-c-nag
                       , vector
                       , transformers
                       , transformers-compat
                       , monad-control
  else
    buildable: False

executable interpolation
  hs-source-dirs:      examples
  main-is:             interpolation.hs
  c-sources:           examples/interpolation.c
  default-language:    Haskell2010
  cc-options:          -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -fPIC -fno-warn-name-shadowing

  if flag(examples)
    buildable: True
    build-depends:       base >=4 && <5
                       , inline-c-nag
                       , vector
                       , Chart
                       , Chart-cairo
  else
    buildable: False
